# quickplay

./: .gitignore  .pylintrc  README.md  build.py  pyproject.toml  quickplay.py  quickplay.spec
.github/workflows/: release.yml
_internal/: folders.txt  quickplay.txt  styles.qss
src/: _version.py  controller.py  episode.py  episode_select.py  main.py  quickplay.py  quickplay_controller.py  quickplay_model.py  quickplay_utils.py  quickplay_view.py  title_select.py  utils.py  video_player.py
src/models/: app_config.py  episode.py  episode_config.py  page.py  playlist_config.py  title.py  title_config.py
src/services/: config_service.py  directory_service.py  episode_service.py  playlist_service.py
src/views/: episode_select.py  main_window.py  player_page.py  title_select.py  video_player.py
